# triangulumancer

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
include/triangulumancer/: CGAL.hpp  Flip.hpp  PVConfiguration.hpp  PointConfiguration.hpp  TOPCOM.hpp  Triangulation.hpp  VectorConfiguration.hpp
src/triangulumancer/: CGAL.cpp  Flip.cpp  PVConfiguration.cpp  PointConfiguration.cpp  TOPCOM.cpp  Triangulation.cpp  VectorConfiguration.cpp  triangulumancer.cpp
tests/: test_point_configuration.py  test_triangulation.py  test_vector_configuration.py
